--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
 <head>
 <title> MAL TAHA </title>
+  <style>
+    body{
+      margin:0;
+      background-color: "yellow";
+    }
+  </style>
 </head>
+  <body>
+    <h1>
+      Ben bir malım!!!
+    </h1>
+    
+  </body>
 </html>
