--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <head>
 <title> MAL TAHA </title>
   <style>
-    body{
-      margin:0;
-      background-color: "yellow";
-    }
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
   </style>
 </head>
   <body>
     <h1>
       Ben bir malım!!!
     </h1>
-    
+    <p>
+      This site made for may own portfolio. Madafuckers!!!
+    </p>
   </body>
 </html>
