--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title> MAL TAHA </title>
+<title> taha </title>
   <style>
 body {
-  background-color: lightblue;
+  background-color: darkblue;
 }
 
 h1 {
-  color: white;
+  color: lemon;
   text-align: center;
 }
 
