--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
   <style>
 body {
   background-color: darkblue;
+  color: white;
 }
 
+    div{
+      width: "500px";
+      padding: "20px";
+      border-shadow: "10 0 10 0 black"
+    }
+    
 h1 {
   color: lemon;
   text-align: center;
@@ -18,11 +25,14 @@ p {
   </style>
 </head>
   <body>
-    <h1>
-      Ben bir malım!!!
-    </h1>
-    <p>
-      This site made for may own portfolio. Madafuckers!!!
-    </p>
+    <div>
+       <h1>
+          Ben bir malım!!!
+        </h1>
+        <p>
+          This site made for may own portfolio. Madafuckers!!!
+        </p>
+    </div>
+   
   </body>
 </html>
